--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -1,72 +1,39 @@
 ---
 ---
 
-@string{aps = {American Physical Society,}}
 
-@book{einstein1956investigations,
-  bibtex_show={true},
-  title={Investigations on the Theory of the Brownian Movement},
-  author={Einstein, Albert},
-  year={1956},
-  publisher={Courier Corporation,}
+@article{du2021auto,
+  abbr={ICRA},
+  title={Auto-Tuned Sim-to-Real Transfer},
+  author={Du *, Yuqing and Watkins*, Olivia and Darrell, Trevor and Abbeel, Pieter and Pathak, Deepak},
+  journal={ICRA},
+  year={2021},
+  selected={true},
+  html={https://arxiv.org/abs/2104.07662},
+  code={https://yuqingd.github.io/autotuned-sim2real/},
+  abstract={We propose a method for automatically tuning robotic simulator system parameters to match the real world using only raw RGB images. Our key insight is to reframe the auto-tuning of parameters as a search problem where we iteratively shift the simulation system parameters to approach the real-world system parameters. We show improvements over domain randomization in simulation and on a real robot.},
 }
 
-@article{einstein1950meaning,
-  abbr={AJP},
-  bibtex_show={true},
-  title={The meaning of relativity},
-  author={Einstein, Albert and Taub, AH},
-  journal={American Journal of Physics,},
-  volume={18},
-  number={6},
-  pages={403--404},
-  year={1950},
-  publisher={American Association of Physics Teachers,}
+
+@article{drissi2018hierarchical,
+  abbr={ICNLP},
+  title={Hierarchical text generation using an outline},
+  author={Drissi, Mehdi and Watkins, Olivia and Kalita, Jugal},
+  selected={true},
+  journal={International Conference on Natural Language Processing},
+  year={2018},
+  html={https://arxiv.org/abs/1810.08802},
+  abstract={We propose a method to improve the generation of coherent long-form text by having the model first generate an outline, then generate full text conditioned on the outline. This improves perplexity but does not improve human evaluation.},
 }
 
-@article{PhysRev.47.777,
-  abbr={PhysRev},
-  title={Can Quantum-Mechanical Description of Physical Reality Be Considered Complete?},
-  author={Einstein, A. and Podolsky, B. and Rosen, N.},
-  abstract={In a complete theory there is an element corresponding to each element of reality. A sufficient condition for the reality of a physical quantity is the possibility of predicting it with certainty, without disturbing the system. In quantum mechanics in the case of two physical quantities described by non-commuting operators, the knowledge of one precludes the knowledge of the other. Then either (1) the description of reality given by the wave function in quantum mechanics is not complete or (2) these two quantities cannot have simultaneous reality. Consideration of the problem of making predictions concerning a system on the basis of measurements made on another system that had previously interacted with it leads to the result that if (1) is false then (2) is also false. One is thus led to conclude that the description of reality as given by a wave function is not complete.},
-  journal={Phys. Rev.,},
-  volume={47},
-  issue={10},
-  pages={777--780},
-  numpages={0},
-  year={1935},
-  month={May},
-  publisher=aps,
-  doi={10.1103/PhysRev.47.777},
-  url={http://link.aps.org/doi/10.1103/PhysRev.47.777},
-  html={https://journals.aps.org/pr/abstract/10.1103/PhysRev.47.777},
-  pdf={example_pdf.pdf},
-  selected={true}
-}
-
-@article{einstein1905molekularkinetischen,
-  title={{\"U}ber die von der molekularkinetischen Theorie der W{\"a}rme geforderte Bewegung von in ruhenden Fl{\"u}ssigkeiten suspendierten Teilchen},
-  author={Einstein, A.},
-  journal={Annalen der physik,},
-  volume={322},
-  number={8},
-  pages={549--560},
-  year={1905},
-  publisher={Wiley Online Library}
-}
-
-@article{einstein1905movement,
-  abbr={Ann. Phys.},
-  title={Un the movement of small particles suspended in statiunary liquids required by the molecular-kinetic theory 0f heat},
-  author={Einstein, A.},
-  journal={Ann. Phys.,},
-  volume={17},
-  pages={549--560},
-  year={1905}
-}
-
-@article{einstein1905electrodynamics,
-  title={On the electrodynamics of moving bodies},
-  author={Einstein, A.},
-  year={1905}
+@article{drissi2018program,
+  abbr={ICML Workshop},
+  title={Program language translation using a grammar-driven tree-to-tree model},
+  author={Drissi*, Mehdi and Watkins*, Olivia and Khant, Aditya and Ojha, Vivaswat and Sandoval, Pedro and Segev, Rakia and Weiner, Eric and Keller, Robert},
+  journal={ICML Workshop on Neural Abstract Machines & Program Induction},
+  year={2018},
+  selected={true},
+  html={https://arxiv.org/abs/1807.01784},
+  code={https://github.com/hmc-cs-mdrissi/neural_nets_research},
+  abstract={We modify existing encoder/decoder approaches for translation between programming language abstract syntax trees by using a grammar-aware decoder which is constrained to only generate syntactically correct programs. This improves performance on a couple synthetic tasks.},
 }
